// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When I instantiate a synchronizer and I call setup and updateCacheIds with a todo list with an item that has Evernote and SimpleMind IDs and the cache is empty and I call teardown the cache written to the local file system is empty 1`] = `"[]"`;

exports[`When I instantiate a synchronizer and I call setup and updateCacheIds with a todo list with an item that has Evernote and SimpleMind IDs and the cached item has only a SimpleMind ID and I call teardown the cache written to the local file system contains the todo item with both IDs 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and I call setup and updateCacheIds with a todo list with an item that has Evernote and SimpleMind IDs and the cached item has only an Evernote ID and I call teardown the cache written to the local file system contains the todo item with both IDs 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and I call setup and updateCacheIds with a todo list with an item that has only a SimpleMind ID and the cached item has both and I call teardown the cache written to the local file system contains the todo item with both IDs 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and I call setup and updateCacheIds with a todo list with an item that has only an Evernote ID and the cached item has both and I call teardown the cache written to the local file system contains the todo item with both IDs 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a URL was added in Evernote the cache contains the new URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":\\"https://ebaytech.berlin/\\",\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a URL was added in Evernote the sync result is that the URL should be added in SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": "https://ebaytech.berlin/",
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and a URL was added in SimpleMind the cache contains the new URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":\\"https://ebaytech.berlin/\\",\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a URL was added in SimpleMind the sync result is that the URL should be added in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": "https://ebaytech.berlin/",
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and a URL was added in both the cache contains the SimpleMind URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":\\"https://www.motor-talk.de/\\",\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a URL was added in both the sync result is that the URL should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": "https://www.motor-talk.de/",
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and a deadline was added in Evernote the cache contains the new deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":\\"2019-01-01T02:00:00.000Z\\",\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a deadline was added in Evernote the sync result is that the deadline should be added in SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": 2019-01-01T02:00:00.000Z,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and a deadline was added in SimpleMind the cache contains the new deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":\\"2019-01-01T02:00:00.000Z\\",\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a deadline was added in SimpleMind the sync result is that the deadline should be added in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": 2019-01-01T02:00:00.000Z,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and a deadline was added in both the cache contains the SimpleMind deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":\\"2019-02-01T02:00:00.000Z\\",\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a deadline was added in both the sync result is that the deadline should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": 2019-02-01T02:00:00.000Z,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and a todo was added in Evernote and I call the setup and synchronize functions and I call the teardown function the cache written to the local file system contains the todo 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":null},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a todo was added in Evernote and I call the setup and synchronize functions the result is that todo is added to SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "ADDED",
      "title": "Singen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and a todo was added in SimpleMind and I call the setup and synchronize functions and I call the teardown function the cache written to the local file system contains the todo 1`] = `"[{\\"evernote\\":{\\"id\\":null,\\"order\\":null,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and a todo was added in SimpleMind and I call the setup and synchronize functions the result is that todo is added to Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "ADDED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and a todo was deleted in Evernote and I call the setup and synchronize functions and I call the teardown function the cache written to the local file system is empty 1`] = `"[]"`;

exports[`When I instantiate a synchronizer and a todo was deleted in Evernote and I call the setup and synchronize functions the result is that todo is removed SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "REMOVED",
      "title": "Singen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and a todo was deleted in SimpleMind and I call the setup and synchronize functions and I call the teardown function the cache written to the local file system is empty 1`] = `"[]"`;

exports[`When I instantiate a synchronizer and a todo was deleted in SimpleMind and I call the setup and synchronize functions the result is that todo is removed Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "REMOVED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and done was changed in Evernote the cache contains the new done 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":true,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and done was changed in Evernote the sync result is that done should be changed in SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": true,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and done was changed in SimpleMind the cache contains the new done 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":true,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and done was changed in SimpleMind the sync result is that done should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": true,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the URL was changed in Evernote the cache contains the new URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":\\"https://www.kijijiautos.ca/\\",\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the URL was changed in Evernote the sync result is that the URL should be changed in SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": "https://www.kijijiautos.ca/",
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and the URL was changed in SimpleMind the cache contains the new URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":\\"https://www.motor-talk.de/\\",\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the URL was changed in SimpleMind the sync result is that the URL should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": "https://www.motor-talk.de/",
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the URL was changed in both the cache contains the SimpleMind URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":\\"https://www.motor-talk.de/\\",\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the URL was changed in both the sync result is that the URL should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": "https://www.motor-talk.de/",
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the URL was removed in Evernote the cache does not contain the URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the URL was removed in Evernote the sync result is that the URL should be removed from SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and the URL was removed in SimpleMind the cache does not contain the URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the URL was removed in SimpleMind the sync result is that the URL should be removed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the URL was removed in both the cache does not contain a URL 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the URL was removed in both the sync result is that nothing should be changed 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the deadline was changed in Evernote the cache contains the new deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":\\"2019-03-01T02:00:00.000Z\\",\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the deadline was changed in Evernote the sync result is that the deadline should be changed in SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": 2019-03-01T02:00:00.000Z,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and the deadline was changed in SimpleMind the cache contains the new deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":\\"2019-02-01T02:00:00.000Z\\",\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the deadline was changed in SimpleMind the sync result is that the deadline should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": 2019-02-01T02:00:00.000Z,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the deadline was changed in both the cache contains the SimpleMind deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":\\"2019-02-01T02:00:00.000Z\\",\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the deadline was changed in both the sync result is that the deadline should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": 2019-02-01T02:00:00.000Z,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the deadline was removed in Evernote the cache does not contain the deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the deadline was removed in Evernote the sync result is that the deadline should be removed from SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and the deadline was removed in SimpleMind the cache does not contain the deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the deadline was removed in SimpleMind the sync result is that the deadline should be removed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Singen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the deadline was removed in both the cache does not contain a deadline 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the deadline was removed in both the sync result is that nothing should be changed 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the order was changed in Evernote the cache contains the changed Evernote order 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561888236534,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Singen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the order was changed in Evernote the sync result is that nothing should be changed 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the title was changed in Evernote the cache contains the new title 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Lachen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the title was changed in Evernote the sync result is that the title should be changed in SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Lachen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and the title was changed in SimpleMind the cache contains the new title 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Tanzen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the title was changed in SimpleMind the sync result is that the title should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Tanzen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and the title was changed in both the cache contains the SimpleMind title 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Tanzen\\",\\"done\\":false,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and the title was changed in both the sync result is that the title should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": false,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Tanzen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;

exports[`When I instantiate a synchronizer and title and done were changed in Evernote the cache contains the new done 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Lachen\\",\\"done\\":true,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and title and done were changed in Evernote the sync result is that title and done should be changed in SimpleMind 1`] = `
Object {
  "evernote": Array [],
  "simpleMind": Array [
    Object {
      "deadline": null,
      "done": true,
      "evernote": Object {
        "deadlineTime": null,
        "id": null,
        "order": null,
      },
      "simpleMind": Object {
        "id": "666",
      },
      "status": "CHANGED",
      "title": "Lachen",
      "url": null,
    },
  ],
}
`;

exports[`When I instantiate a synchronizer and title and done were changed in SimpleMind the cache contains the new done 1`] = `"[{\\"evernote\\":{\\"id\\":\\"777\\",\\"order\\":1561885947226,\\"deadlineTime\\":null},\\"simpleMind\\":{\\"id\\":\\"666\\"},\\"title\\":\\"Tanzen\\",\\"done\\":true,\\"deadline\\":null,\\"url\\":null,\\"status\\":\\"UNCHANGED\\"}]"`;

exports[`When I instantiate a synchronizer and title and done were changed in SimpleMind the sync result is that title and done should be changed in Evernote 1`] = `
Object {
  "evernote": Array [
    Object {
      "deadline": null,
      "done": true,
      "evernote": Object {
        "deadlineTime": null,
        "id": "777",
        "order": 1561885947226,
      },
      "simpleMind": Object {
        "id": null,
      },
      "status": "CHANGED",
      "title": "Tanzen",
      "url": null,
    },
  ],
  "simpleMind": Array [],
}
`;
